<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (C) 2025 Kostya Stern

    This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the Free
    Software Foundation; either version 2 of the License, or (at your option)
    any later version.

    This program is distributed in the hope that it will be useful, but WITHOUT
    ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
    FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
    more details.

    You should have received a copy of the GNU General Public License along
    with this program; if not, write to the Free Software Foundation, Inc., 51
    Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.sternkn.djvu</groupId>
    <artifactId>djvu-reader</artifactId>
    <version>1.0.0</version>

    <developers>
        <developer>
            <name>Kostiantyn Stern</name>
            <email>KostjaStern@gmail.com</email>
        </developer>
    </developers>


    <properties>

        <java.version>21</java.version>

        <version.junit>5.8.0</version.junit>
        <version.mockito>5.12.0</version.mockito>

        <javafx.version>23</javafx.version>

        <!--
              Windows: win
              macOS / Intel: mac
              macOS / Apple Silicon: mac-aarch64
              Linux / x64: linux
              Linux / aarch64 (Raspberry Pi): linux-aarch64
        -->
        <javafx.platform>mac-aarch64</javafx.platform>
        <app.name>DjVu Viewer</app.name>
        <app.installer.type>dmg</app.installer.type>
        <app.mainClass>com.sternkn.djvu.gui.MainApp</app.mainClass>
        <app.icon.file>djvu_app_icon_1_128.icns</app.icon.file>
        <app.vendor>Kostya Stern</app.vendor>
        <app.copyright>Copyright (C) 2025 ${app.vendor}</app.copyright>
        <app.java.options>-Xmx1g</app.java.options>

        <create-installer.skip>true</create-installer.skip>
        <create-win-installer.skip>true</create-win-installer.skip>
        <create-mac-installer.skip>true</create-mac-installer.skip>

        <version.slf4j>2.0.13</version.slf4j>
        <log4j2.version>2.25.3</log4j2.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>${javafx.platform}</classifier>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${version.slf4j}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${version.mockito}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>4.0.18</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.10.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <!--
               MacOS Apple Silicon aarch64
               $ mvn clean package -Pmac-aarch64-installer
            -->
            <id>mac-aarch64-installer</id>
            <properties>
                <create-installer.skip>false</create-installer.skip>
                <create-mac-installer.skip>false</create-mac-installer.skip>
            </properties>
        </profile>
        <profile>
            <!--
               MacOS Intel
               $ mvn clean package -Pmac-installer
            -->
            <id>mac-installer</id>
            <properties>
                <create-installer.skip>false</create-installer.skip>
                <create-mac-installer.skip>false</create-mac-installer.skip>
                <javafx.platform>mac</javafx.platform>
            </properties>
        </profile>
        <profile>
            <!--
               Windows
               $ mvn clean package -Pwin-installer
            -->
            <id>win-installer</id>
            <properties>
                <create-installer.skip>false</create-installer.skip>
                <create-win-installer.skip>false</create-win-installer.skip>
                <javafx.platform>win</javafx.platform>
                <app.icon.file>djvu_app_icon_1_128.ico</app.icon.file>
                <app.installer.type>msi</app.installer.type>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.9.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${app.mainClass}</mainClass>
                </configuration>
            </plugin>

            <!--
                $ mvnDebug package
                $ mvn exec:java
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <mainClass>${app.mainClass}</mainClass>
                    <classpathScope>runtime</classpathScope>
                    <systemProperties>
                        <systemProperty>
                            <key>apple.awt.application.name</key>
                            <value>${app.name}</value>
                        </systemProperty>
                    </systemProperties>
                </configuration>
                <executions>
                    <execution>
                        <id>mvn-javafx-jlink</id>
                        <phase>package</phase>
                        <goals><goal>exec</goal></goals>
                        <configuration>
                            <skip>${create-installer.skip}</skip>
                            <executable>mvn</executable>
                            <arguments>
                                <argument>javafx:jlink</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jpackage-mac</id>
                        <phase>package</phase>
                        <goals><goal>exec</goal></goals>
                        <configuration>
                            <skip>${create-mac-installer.skip}</skip>
                            <executable>jpackage</executable>
                            <arguments>
                                <argument>--runtime-image</argument>
                                <argument>${project.build.directory}/image</argument>

                                <argument>--name</argument>
                                <argument>${app.name}</argument>

                                <argument>--type</argument>
                                <argument>${app.installer.type}</argument>

                                <argument>--app-version</argument>
                                <argument>${project.version}</argument>

                                <argument>--copyright</argument>
                                <argument>${app.copyright}</argument>

                                <argument>--vendor</argument>
                                <argument>${app.vendor}</argument>

                                <argument>--verbose</argument>

                                <argument>--dest</argument>
                                <argument>${project.build.directory}/installer</argument>

                                <argument>--main-class</argument>
                                <argument>${app.mainClass}</argument>

                                <argument>--java-options</argument>
                                <argument>${app.java.options}</argument>

                                <argument>--icon</argument>
                                <argument>${project.build.directory}/classes/icons/${app.icon.file}</argument>

                                <argument>--input</argument>
                                <argument>${project.build.directory}</argument>

                                <argument>--main-jar</argument>
                                <argument>${project.build.finalName}.jar</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>jpackage-win</id>
                        <phase>package</phase>
                        <goals><goal>exec</goal></goals>
                        <configuration>
                            <skip>${create-win-installer.skip}</skip>
                            <executable>jpackage</executable>
                            <arguments>
                                <argument>--runtime-image</argument>
                                <argument>${project.build.directory}/image</argument>
                                
                                <argument>--name</argument>
                                <argument>${app.name}</argument>
                                
                                <argument>--type</argument>
                                <argument>${app.installer.type}</argument>
                                
                                <argument>--app-version</argument>
                                <argument>${project.version}</argument>

                                <argument>--copyright</argument>
                                <argument>${app.copyright}</argument>

                                <argument>--vendor</argument>
                                <argument>${app.vendor}</argument>

                                <argument>--verbose</argument>
                                
                                <argument>--dest</argument>
                                <argument>${project.build.directory}/installer</argument>
                                
                                <argument>--main-class</argument>
                                <argument>${app.mainClass}</argument>

                                <argument>--java-options</argument>
                                <argument>${app.java.options}</argument>
                                
                                <argument>--icon</argument>
                                <argument>${project.build.directory}/classes/icons/${app.icon.file}</argument>
                                
                                <argument>--input</argument>
                                <argument>${project.build.directory}</argument>

                                <argument>--main-jar</argument>
                                <argument>${project.build.finalName}.jar</argument>

                                <argument>--win-dir-chooser</argument>
                                <argument>--win-shortcut</argument>
                                <argument>--win-menu</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
